<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivity">


    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hours"
        android:inputType="number"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <NumberPicker
        android:id="@+id/number_picker_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/start_date"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:translationX="194dp"
        android:translationY="-24dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_start_date"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_end_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:translationX="194dp"
        android:translationY="-24dp" />


</LinearLayout>