<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivityVolunteering">

    <EditText
        android:id="@+id/edit_text_title_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_description_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/edit_text_gpa_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gpa"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_education"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/start_date"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2_education"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:translationX="194dp"
        android:translationY="-24dp" />

    <TextView
        android:id="@+id/textView7_education"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_start_date"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8_education"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_end_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:translationX="194dp"
        android:translationY="-24dp" />

</LinearLayout>